--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@
   float: right;
 }
 
+/* SCALE WITH DATA */
+
 .top-bar__scale {
   background-color: #fff;
   z-index: 1;
@@ -50,20 +52,131 @@
   position: sticky;
   top: 74px;
   left: 0;
+  display: flex;
+  align-items: center;
 }
 
-.schedule {
-  margin-top: 78px;
+.top-bar__scale__date {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  font-size: 1.1em;
+  font-weight: 500;
+  color: #000000;
+  letter-spacing: 0;
+  padding-left: 24px;
+  width: 245px;
+  height: 100%;
+  border-right: 2px solid #e9ecef;
+  box-sizing: border-box;
+}
+
+.top-bar__scale__date_left-arrow {
+  margin-right: 12.5px;
+  border-radius: 100px;
+  width: 14px;
+  height: 14px;
+  padding: 8px;
+  background-color: #e9ecef;
+}
+
+.top-bar__scale__date_right-arrow {
+  margin-left: 12.5px;
+  background-repeat: no-repeat;
+  border-radius: 100px;
+  width: 14px;
+  height: 14px;
+  padding: 8px;
+  background-color: #e9ecef;
+}
+
+.top-bar__scale__date_right-arrow:hover,
+.top-bar__scale__date_left-arrow:hover {
+  cursor: pointer;
+}
+
+/* SCALE TIMELINE */
+
+.top-bar__scale__timeline {
+  display: flex;
+}
+
+.hour {
+  flex: 1;
+  position: relative;
+  box-sizing: border-box;
+  width: 50px;
+  text-align: center;
+}
+
+.hour:before {
+  display: block;
+  content: "";
+
+  top: 100%;
+  left: 50%;
+  position: absolute;
+
+  width: 0;
+  /* минус высота заголовка */
+  height: calc(100vh - 60px);
+  border-left: 1px solid #ccc;
+  margin-top: 16px;
+}
+
+/* MAIN SCHEDULE PART */
+
+.schedule {
+  display: flex;
+  flex-direction: row;
+}
+
+.schedule__rooms {
+  min-width: 245px;
+  display: block;
+  white-space: nowrap;
+  flex-direction: column;
+  margin-top: 74px;
+  box-sizing: border-box;
+  padding-left: 24px;
   position: sticky;
   left: 0;
-  background-color: blue;
+  top: 0;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
 }
+
+.floor {
+  margin-top: 21px;
+}
+
+.floor_num {
+  color: #858e98;
+  letter-spacing: 0.4px;
+  font-size: 0.9em;
+}
+
+.room {
+  padding-top: 15px;
+  font-size: 1.1em;
+  color: #000000;
+  /* line-height: 17px; */
+}
+
+.room > p:last-child {
+  padding-top: 3px;
+  font-size: 0.9em;
+}
+
+.is_busy {
+  color: #858e98;
+}
+/* SCHEDULE TIMELAPSE */
 
 .schedule__timelapse {
   background-color: green;
   height: 900px;
+  overflow: scroll;
   min-width: 1600px;
-  margin-left: 180px;
 }
