--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   overflow: scroll;
 }
 
+#main-container::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent;
+}
+
 .top-bar__header {
   position: fixed;
   top: 0;
@@ -45,14 +50,11 @@
 
 .top-bar__scale {
   background-color: #fff;
-  z-index: 1;
   height: 46px;
   border-bottom: 1px solid #e9ecef;
   box-shadow: 0 -1px 0 0 #e9ecef;
   min-width: 800px;
-  position: sticky;
-  top: 74px;
-  left: 0;
+  margin-top: 75px;
   display: flex;
   align-items: center;
 }
@@ -66,10 +68,11 @@
   color: #000000;
   letter-spacing: 0;
   padding-left: 24px;
-  width: 245px;
+  min-width: 245px;
   height: 100%;
   border-right: 2px solid #e9ecef;
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 .top-bar__scale__date_left-arrow {
@@ -108,6 +111,7 @@
   box-sizing: border-box;
   width: 50px;
   text-align: center;
+  margin: 8px;
 }
 
 .hour:before {
@@ -130,7 +134,6 @@
 #schedule {
   display: flex;
   flex-direction: row;
-  margin-top: 74px;
   /* overflow: scroll; */
 }
 
@@ -178,12 +181,17 @@
 
 .aside--float {
   position: fixed;
-  left: 0;
+  top: 104px;
 
   visibility: hidden;
 }
 
 .aside--float .room > p:first-child {
+  display: inline-block;
+  visibility: visible;
+}
+
+.aside--float .floor_num {
   display: inline-block;
   visibility: visible;
 }
